test/fail/mixins-system-nested-fail.mo
import Nested "mixins/NestedSystem2";

persistent actor {
  include Nested();
};
